# AI-agent

./: .gitignore  CMakeLists.txt  README.md  main.cpp
LLM/: llm_query.cpp
LLM/include/llm/: llm_query.hpp
Missions/: Mission.hpp
STT/: stt.cpp
STT/include/stt/: stt.hpp
TTS/: tts.hpp
Tools/: CMakeLists.txt  compile-tool.sh  tools.cpp
Tools/include/tools/: tools.hpp
Tools/tool_library/create_tool/src/: create_tool.cpp
Tools/tool_library/get_time/: instructions.txt
Tools/tool_library/get_time/src/: get_time.cpp
Tools/tool_library/run_applescript/: instructions.txt
Tools/tool_library/run_applescript/src/: run_applescript.cpp
Tools/tool_library/run_command/: instructions.txt
Tools/tool_library/run_command/src/: run_command.cpp
Tools/tool_library/run_python/: instructions.txt
Tools/tool_library/run_python/src/: run_python.cpp
Tools/tool_library/web_search/: instructions.txt
Tools/tool_library/web_search/src/: web_search.cpp
